# public/swagger/swagger.yaml
@@ -106,7 +106,7 @@ paths:
 
   #!_______________________________________________________________________________________________________
 
-  /api/users/user-email-verification/{emailVerificationToken}:
+  /api/users/email-verification/{emailVerificationToken}:
     get:
       description: Verification of user email.
       tags:
@@ -134,9 +134,10 @@ paths:
             Internal server error:
             - Internal server error.
             - An error occurred while accessing the database. Please try again later.
-  #!_______________________________________________________________________________________________________
 
-  /users/send-email-verification-link:
+  #!_______________________________________________________________________________________________________
+  
+  /api/users/send-email-verification-link:
     post:
       description: Send email verification link to user email.
       tags:
@@ -170,3 +171,40 @@ paths:
             - Internal server error.
             - An error occurred while accessing the database. Please try again later.
             - Unable to send the confirmation email. Please check the user email address and try again.
+
+  #!_______________________________________________________________________________________________________
+  
+  /api/users/forget-password:
+    post:
+      description: Send password reset link to user email.
+      tags:
+        - Users
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - email
+              properties:
+                email:
+                  type: string
+                  format: email
+                  maxLength: 255
+                  example: "jean.dupont@example.com"
+      responses:
+        "200":
+          description: The password reset link has been sent to the user email. The link is valid for 5 minutes only.
+        "404":
+          description: User not found.
+        "422":
+          description: |
+            Unprocessable Content - The provided inputs failed validation.  
+            Please ensure all required fields are correctly filled and meet the validation criteria.
+        "500":
+          description: |
+            Internal server error:
+            - Internal server error.
+            - An error occurred while accessing the database. Please try again later.
+            - Unable to send the password reset link. Please check the user email address and try again.
