# routes/ApiRoutes/UsersRoute.php
@@ -3,6 +3,7 @@
 use App\Http\Controllers\Users\FirstAdminRegistrationController;
 use App\Http\Controllers\Users\SendEmailVerificationLinkController;
 use App\Http\Controllers\Users\UserEmailVerificationController;
+use App\Http\Controllers\Users\UserForgetPasswordController;
 use Illuminate\Support\Facades\Route;
 
 Route::post(
@@ -13,13 +14,19 @@ Route::post(
 
 
 Route::get(
-    '/users/user-email-verification/{emailVerificationToken}',
+    '/users/email-verification/{emailVerificationToken}',
     UserEmailVerificationController::class
 )
-    ->name('users.user-email-verification');
+    ->name('users.email-verification');
 
 Route::post(
     '/users/send-email-verification-link',
     SendEmailVerificationLinkController::class
 )
     ->name('users.send-email-verification-link');
+
+Route::post(
+    '/users/forget-password',
+    UserForgetPasswordController::class
+)
+    ->name('users.forget-password');
